# rpi-ws2811-smi-rust

./: .gitmodules  Cargo.toml  build.rs  compile_commands.json  wrapper.h
.cargo/: config.toml
examples/: test.rs
src/: consts.rs  dma.rs  error.rs  lib.rs  mbox.rs  rpi_dma_utils.rs  smi.rs  smileds.rs  utils.rs
src/c2rust/: dma_defs.rs  mod.rs  smi_defs.rs  smileds.rs
